# python-cmaketools

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  cmakebuilder.py  cmakecommands.py  cmakeutil.py  pyproject.toml  setup.cfg  setup.py  tox.ini
cmaketools/: __init__.py  build_meta.py  cmakebuilder.py  cmakecommands.py  cmakecontrol.py  cmakecontroller.py  cmakeoptions.py  cmakerunner.py  cmakeutil.py  ctestutil.py  dist.py  gitutil.py  vcvarsall.py
cmaketools/command/: __init__.py  build.py  build_ext.py  build_py.py  develop.py  manage_cmake.py  sdist.py
docs/: cmake_tips.md  options.md
src/: CMakeLists.txt
src/assets/: CMakeLists.txt
src/example_module/: CMakeLists.txt  bindings.cpp
src/subpackage/: CMakeLists.txt
src/subpackage/subsubpackage/: CMakeLists.txt  bye.py
tests/: CMakeLists.txt  cmakeutil.py  conftest.py  cpp_test.py  hello_test.py  math_test.py  requirements.txt  test_cmakerunner.py  test_cmaketools.py  test_cmakeutil.py  test_dist.py  test_gitutil.py  test_hello_cpp.py  test_math.cpp  test_vcvarsall.py
tests/samples/hello-cpp/: CMakeLists.txt  setup.cfg
tests/samples/hello-cpp/hello/: CMakeLists.txt
tests/samples/hello-cython/: setup.py
tests/samples/hello-no-language/: setup.py
tests/samples/hello-pure/: setup.py
