[metadata]
name = cmaketools
version = attr: cmaketools.__version__
author = Takeshi (Kesh) Ikuma
author_email = tikuma@gmail.com
description = Seamless integration of Cmake build system to setuptools/distutils
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
url = https://github.com/python-cmaketools/python-cmaketools
project_urls=
    Issues=https://github.com/python-cmaketools/python-cmaketools/issues
    Pull Requests=https://github.com/python-cmaketools/python-cmaketools/pulls
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging
    Topic :: Utilities
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages=cmaketools
install_requires =
    setuptools>=40.8.0
    wheel
    ninja
    vswhere; platform_system=="Windows"
python_requires = >=3.6,
test_requires = 
    pytest
    pytest-virtualenv
    virtualenv
