[metadata]
name=hello
version=1.2.3
description=a minimal example package
author=The scikit-build team
license=MIT

[options]
packages=bonjour, hello
py_modules=bonjourModule, helloModule
ext_module_hint=Python3_add_library

[options.package_data]
bonjour = data/*.txt, data/terre.txt

[build_ext]
generator = Ninja
